--- a/src/Tor.Currency.Fixer.Io.Client.Tests/Tor.Currency.Fixer.Io.Client.Tests.csproj
+++ b/src/Tor.Currency.Fixer.Io.Client.Tests/Tor.Currency.Fixer.Io.Client.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,10 +9,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Json\historical.json" />
+    <None Remove="Json\latest.json" />
+    <None Remove="Json\symbols.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Json\historical.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Json\latest.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Json\symbols.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tor.Currency.Fixer.Io.Client\Tor.Currency.Fixer.Io.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
