--- a/src/Tor.Currency.Fixer.Io.Client/Tor.Currency.Fixer.Io.Client.csproj
+++ b/src/Tor.Currency.Fixer.Io.Client/Tor.Currency.Fixer.Io.Client.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Tor.Currency.Fixer.Io.Client.Tests" />
+  </ItemGroup>
+
 </Project>
