Add unit tests, SafeBoolConverter

--- a/src/Tor.Fixer.Client.Tests/Tor.Fixer.Client.Tests.csproj
+++ b/src/Tor.Fixer.Client.Tests/Tor.Fixer.Client.Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Json\convert.json" />
     <None Remove="Json\error.json" />
     <None Remove="Json\historical.json" />
     <None Remove="Json\latest.json" />
@@ -26,6 +27,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Json\symbols.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Json\convert.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
