Add TimeSeries page to Demo app

--- a/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
+++ b/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Tor.Fixer.Client.Tests" />
+    <InternalsVisibleTo Include="Tor.Fixer.Client.BlazorDemo" />
   </ItemGroup>
 
 </Project>
