--- a/src/Tor.Fixer.Client.Tests/Tor.Fixer.Client.Tests.csproj
+++ b/src/Tor.Fixer.Client.Tests/Tor.Fixer.Client.Tests.csproj
@@ -14,6 +14,7 @@
     <None Remove="Json\historical.json" />
     <None Remove="Json\latest.json" />
     <None Remove="Json\symbols.json" />
+    <None Remove="Json\timeseries.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +31,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Json\convert.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Json\timeseries.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
