--- a/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
+++ b/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
@@ -9,6 +9,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/T0RS0FT/Tor.Fixer.Client</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/T0RS0FT/Tor.Fixer.Client</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
