--- a/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
+++ b/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/T0RS0FT/Tor.Fixer.Client</RepositoryUrl>
     <PackageProjectUrl>https://github.com/T0RS0FT/Tor.Fixer.Client</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>fixer fixer.io client api</PackageTags>
+    <PackageTags>fixer;fixer.io;client;api;currency;exchange</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
