--- a/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
+++ b/src/Tor.Fixer.Client/Tor.Fixer.Client.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <Version>1.0.1</Version>
     <ImplicitUsings>enable</ImplicitUsings>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Fixer.Io client</Title>
@@ -13,6 +14,14 @@
     <PackageProjectUrl>https://github.com/T0RS0FT/Tor.Fixer.Client</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>fixer;fixer.io;client;api;currency;exchange</PackageTags>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
